prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/end_of_stmt_expected.nut
// EXPECT_ERROR: "end of statement expected"
let x = 5 let y = 6
